--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App.Starting">
+        >
 
         <activity
+            android:theme="@style/Theme.App.Starting"
             android:name=".view.OnboardingActivity"
             android:exported="true"
             android:label="@string/app_name"
